feat: esbuild joined us

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>UI JS Builder</title>
 </head>
 <body>
-  <script src="./scripts/build/index.js"></script>
+  <div id="root"></div>
+  <script src="./src/build/index.js"></script>
 </body>
 </html>
